legacy-backend-go/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: legacy-backend-go
  labels:
    istio-injection: enabled
