legacy-backend-go/manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: legacy-backend-go
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/ingressgateway
  http:
    - match:
        - uri:
            prefix: "/legacy-backend-go/"
      rewrite:
        uri: "/"
      route:
        - destination:
            port:
              number: 80
            host: legacy-backend-go
